# indieclaw

./: .bandit  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  deploy.sh  install.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yml
docs/: index.html
indieclaw/: __init__.py  agent.py  auth.py  claude_code.py  config.py  daemon.py  doctor.py  handlers.py  handlers_commands.py  main.py  prompt_builder.py  scheduler.py  session_state.py  setup.py  setup_services.py  skills.py  subconscious.py  tool_loader.py  tools.py  tools_sdk.py  tui.py  version.py  watchdog.sh  workspace.py
scripts/: bootstrap_mempalace.py
templates/: AGENT.md  SUBCONSCIOUS.md
templates/skills/handover/: SKILL.md
tests/: test_agent.py  test_auth.py  test_config.py  test_daemon.py  test_doctor.py  test_handlers.py  test_mempalace_tools.py  test_scheduler.py  test_session_state.py  test_skills.py  test_subconscious.py  test_tool_loader.py  test_tools.py  test_tools_sdk.py  test_version.py  test_workspace.py
